<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="10">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="10"
            >

            <ImageView
                android:layout_width="150dp"
                android:layout_height="120dp"
                android:src="@drawable/ychat"
                android:id="@+id/imageView"
                android:layout_marginTop="60dp"
                android:layout_marginBottom="50dp"
                android:layout_gravity="center"
                />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:theme="@style/MyEditTextTheme"
                >

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:id="@+id/phone_number"
                android:singleLine="true"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:textSize="@dimen/text_size"
                android:hint="@string/email_hint"
                android:drawableLeft="@drawable/ic_action_call_drk"
                android:inputType="textWebEmailAddress"
                style="@style/Widget.AppCompat.Light.AutoCompleteTextView"
                android:textAppearance="@style/TextAppearance.AppCompat"
                />

               </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                android:theme="@style/MyEditTextTheme"
                >

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="2"
                    android:id="@+id/password_edit_text"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:textSize="@dimen/text_size"
                    android:hint="@string/password_hint"
                    android:drawableLeft="@drawable/ic_action_secure"
                    android:inputType="textPassword"
                    android:padding="10dp"
                    android:textAppearance="@style/TextAppearance.AppCompat" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:layout_marginTop="25dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:background="@drawable/button"
                android:padding="15dp"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size"
                android:text="@string/login_hint"
                android:elevation="5dp"
                android:id="@+id/login_main"
                android:textAllCaps="false"
                />

            <Button
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:background="@drawable/white_buuton"
                android:padding="15dp"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size"
                android:text="@string/forget_password"
                android:elevation="5dp"
                android:textAllCaps="false"
                android:id="@+id/forget_password"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:layout_marginTop="50dp"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_size"
                    android:text="@string/joinus"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_size"
                    android:textColor="#ea3729"
                    android:text="@string/singup"
                    android:id="@+id/sign_up_main"
                    android:layout_marginLeft="5dp"
                    android:elevation="5dp"
                    />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>